<resources>
    <string name="app_name">Quiz Application</string>

    <string name="tap_again">Нажмите Назад еще раз для выхода</string>

    <string name="play">Начать тест</string>
    <string name="settings">Настройки</string>
    <string name="about_app">О приложении</string>
    <string name="records">Рекорды</string>
    <string name="exit">Выход</string>
    <string name="categories">Выберите категорию</string>
    <string name="modes">Выберите режим</string>

    <string name="settings_clear">Хочешь сбросить настройки?</string>
    <string name="record_clear">Хочешь очистить таблицу рекордов?</string>
    <string name="close_prompt">Хочешь закрыть приложение?</string>
    <string name="close_title">Сбросить настройки</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="ok">ОК</string>
    <string name="cancel">Отмена</string>
    <string name="failed">Ошибка</string>
    <string name="finish">Завершить</string>

    <string name="score_card">Результаты</string>
    <string name="score">Верно</string>
    <string name="wrong">Неверно</string>
    <string name="skipped">Пропущено</string>
    <string name="skip_text">Пропустить?</string>
    <string name="skip_prompt">Пропустить этот вопрос?</string>
    <string name="quiz_close_prompt">Закрыть приложение?</string>

    <string name="details_text">Подробно</string>
    <string name="next_question">Следующий вопрос</string>
    <string name="skipped_text">Вы пропустили этот вопрос</string>
    <string name="welcome_text">Проверьте ваши знания!</string>
    <string name="ready_prompt">Вы готовы?</string>
    <string name="quiz_prompt">Тестирование</string>
    <string name="cancel_prompt">Хотите закончить?</string>


    <string name="greeting_text1">Плохо. Пробуйте снова.</string>
    <string name="greeting_text2">Молодец. Хороший результат!</string>
    <string name="greeting_text3">Великолепно! Отличный результат!</string>

    <string name="game">Игра</string>
    <string name="vibration">Вибрация</string>
    <string name="sound_effects">Звуковые эффекты</string>
    <string name="font_size">Размер шрифта</string>
    <string name="question">Вопрос</string>
    <string name="answer">Ответ\t\t</string>
    <string name="design">Дизайн</string>
    <string name="dark_theme">Темная тема</string>
    <string name="game_background">Игровой фон</string>

    <string name="pref_notification_title">Настройка уведомлений</string>
    <string name="pref_notification_summ">Включить/выключить уведомления</string>
    <string name="pref_zoom_title">Zoom Controller</string>
    <string name="pref_zoom_summ">Enable zoom controller to zoom in/out pages</string>
    <string name="pref_text_title">Размер текста</string>
    <string name="select_size">Выберите размер текста</string>

    <string name="small_text">Маленький</string>
    <string name="default_text">Средний</string>
    <string name="large_text">Большой</string>
    <string name="quiz_promt_third_text">Пройти тест снова?</string>
    <string name="quiz_question_title_1">Вопрос %d</string>
    <string name="quiz_question_title">%d</string>

    <string name="name">Рекорд записан! Введите свое имя:</string>
    <string name="repeat">\tПовторть</string>
    <string name="main_menu">\tГлавное меню</string>
    <string name="records_2">\tРекорды</string>

    <string name="info_app">Приложение создано из интереса в развлекательно - образовательных целях.
        \n\nВы можете погрузится увлекательный процесс ответа на простые и не очень вопросы. Приложение предлагает несколько режим игры.
        \nВ первых двух у вас в руках случайные вопросы, а также прпятствия, которые будут мешать ответу.
        \nТретий представляет собой выбор интересующей вас категории и в нем нет ограничений.
        \n\nПриятной игры, друзья!</string>

    <string name="info_categories">• Вопросы: 10\n• Время: не ограничено\n• Пропуск вопрода: да</string>
    <string name="info_modes">\t\t\tОбычный режим\n• Вопросы: 15\n• Время: не ограничено\n• Количество жизней: 3\n• Пропуск вопроса: да\n\n\t\t\tНа время\n• Вопросы: 15\n• Время: 60сек\n\tНеправильный ответ: -2сек\n\tПравильный ответ: +2сек\n</string>

</resources>
