<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@android:style/MediaButton.Ffwd"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/toolbarTop"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="serif"
            android:text="@string/settings"
            android:textAlignment="center"
            android:textAppearance="@style/MyText"
            android:textSize="24sp" />

        <ImageButton
            android:id="@+id/btn_default"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:layout_gravity="center|end"
            app:srcCompat="@drawable/ic_setting"
            android:background="#00FF0000"/>
    </FrameLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">

            <TextView
                android:id="@+id/textView_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:text="@string/game"
                android:fontFamily="serif"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/btn_sw_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:text="@string/vibration"
                android:textSize="20sp"
                android:theme="@style/MySwitch" />

            <Switch
                android:id="@+id/btn_sw_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dip"
                android:text="@string/sound_effects"
                android:textSize="20sp"
                android:theme="@style/MySwitch" />

            <View
                android:id="@+id/divider_1"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="20dip"
                android:background="@color/gray" />

            <TextView
                android:id="@+id/textView_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:text="@string/font_size"
                android:fontFamily="serif"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/texе_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question"
                    android:textSize="20sp"
                    android:textColor="@color/black"/>

                <SeekBar
                    android:id="@+id/sBar_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:max="20"
                    android:progress="10"
                    android:progressTint="@color/light_green"
                    android:thumbTint="@color/blue" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer"
                    android:textSize="20sp"
                    android:fontFamily="serif"
                    android:textColor="@color/black"/>

                <SeekBar
                    android:id="@+id/sBar_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:max="20"
                    android:progress="10"
                    android:progressTint="@color/light_green"
                    android:thumbTint="@color/blue" />
            </LinearLayout>

            <View
                android:id="@+id/divider_2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="20dip"
                android:background="@color/gray" />

            <TextView
                android:id="@+id/textView_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:text="@string/design"
                android:textSize="18sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp">

                <TextView
                    android:textColor="@color/black"
                    android:id="@+id/btn_sw_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/dark_theme"
                    android:textSize="20sp"
                    android:theme="@style/MySwitch" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="end"
                    app:srcCompat="@drawable/ic_lock_2" />
            </FrameLayout>

            <Switch
                android:id="@+id/btn_sw_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="20dip"
                android:text="@string/game_background"
                android:textSize="20sp"
                android:theme="@style/MySwitch" />


        </LinearLayout>
    </ScrollView>


</LinearLayout>